- the error log messages for txt files missing header or footer markers now issue from the parser. Fixes #259.
- fixed a bug triggered by urlencoded spaces in an id fragment - seen in #48368
- when audio file links are replaced with audio elements, the link contents is now kept in a span tag containing the audio element. Fixes #260

0.13.4 January 22, 2025
- fix failed parsing when an `a` element has no tail

0.13.3 January 21, 2025
- fix failures with unknown mediatypes.
- fix validation errors with linked image


0.13.2 January 20, 2025
With this release we add some important new capabilities to Ebookmaker; other more profound functionalities such as PDF generation have been deferred to the next major version (0.14), but important groundwork is laid so that problems can surface sooner rather than later.

- This release includes support for MathML. Although it's over 10 years old, it's only recently that all the major web browsers are supporting MathML. MathML has been part of the EPUB3 spec since its beginning. MathML also has important accessibility attributes and some assistive technologies (but not all), are supporting it. It renders math beautifully, allowing equations to reflow in ebooks, the lack of which makes our math-containing ebooks a poor experience in EPUB readers and Kindles. Fixes #254
    - For compatibility with older ebook readers, we are converting `math` element to `img` elements for our EPUB2 files. The `alttext` attribute of the math element will be used for the `alt` attribute. Because of this, use of the `altimg` and `alttext` attributes on the math element should be encouraged. If altimage is not supplied, the text content of the mathML content will be used in the EPUB2 file. 
    - While support for MathML in Ebookmaker enables experimental use and possibly deployment at PG, it is up to PG and DP management to determine if and when to recommend its use.